# mytweets

./: .gitignore  index.md  pyproject.toml
mytweets/api/: __init__.py  bookmarks.py  likes.py  user_id.py
tests/: test_mybookmarks.py  test_mylikes.py  test_mytweets.py  test_user_id.py
