[tool.poetry]
name = "mytweets"
version = "0.1.0"
description = ""
authors = ["yrcmpbll <yuri.campbell@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
oauthlib = "^3.2.0"
requests-oauthlib = "^1.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://yrcmpbll.github.io/mytweets/"
Source = "https://github.com/yrcmpbll/mytweets"